--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             margin-top: 30px;
         }
         .realtor-info img {
-            width: 100%; /* Set width to 100% to make it a full-sized square */
+            max-width: 300px; /* Set width to 100% to make it a full-sized square */
             height: auto; /* Maintain aspect ratio */
             margin-bottom: 20px;
         }
