--- a/AboutUs.html
+++ b/AboutUs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ruth - Short-Term Rental Hostess</title>
+    <title>Ruth and Jamie - Short-Term Rental Hosts</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -74,16 +74,16 @@
                 <a href="https://thevplaces.github.io/LittleRockProperties1.html">Properties</a>
             </div>
         </div>
-        <h2 class="title">Meet Ruth - Your Dedicated Short-Term Rental Hostess</h2>
+        <h2 class="title">Meet Ruth and Jamie - Your Dedicated Short-Term Rental Hosts</h2>
         <div class="bio">
             <div class="bio-text">
-                <p>With a passion for hospitality and a keen eye for detail, Ruth ensures that every guest enjoys a seamless and unforgettable stay in her properties.</p>
-                <p>Born and raised in the heart of the charming town she now calls home, Ruth's deep-rooted familiarity with the area shines through in every aspect of her hosting. Whether it's recommending hidden gems for dining, sharing insider tips on local attractions, or suggesting off-the-beaten-path activities, Ruth's knowledge is unparalleled.</p>
-                <p>Ruth takes great pride in maintaining impeccably clean properties, ensuring that each guest feels right at home from the moment they step through the door. With her meticulous attention to cleanliness and comfort, guests can rest assured that they'll enjoy a relaxing and hygienic environment throughout their stay.</p>
-                <p>What truly sets Ruth apart is her lightning-fast response time and personalized travel assistance. Whether guests have a question about the property, need help planning their itinerary, or simply want recommendations for the best coffee shops in town, Ruth is always just a message away. With her warm and attentive approach, she goes above and beyond to tailor each guest's experience to their unique preferences and needs.</p>
-                <p>From complimentary welcome baskets to curated lists of local attractions, Ruth's thoughtful amenities and personalized touches ensure that every guest feels valued and cared for. Whether you're visiting for a weekend getaway or an extended stay, Ruth is dedicated to making your time in her properties truly unforgettable.</p>
+                <p>As a dynamic duo with a shared passion for hospitality and a keen eye for detail, Ruth and Jamie ensure that every guest enjoys a seamless and unforgettable stay in their properties.</p>
+                <p>Both born and raised in the heart of the charming town they now call home, Ruth and Jamie's deep-rooted familiarity with the area shines through in every aspect of their hosting. Whether it's recommending hidden gems for dining, sharing insider tips on local attractions, or suggesting off-the-beaten-path activities, their combined knowledge is unparalleled.</p>
+                <p>Ruth and Jamie take great pride in maintaining impeccably clean properties, ensuring that each guest feels right at home from the moment they step through the door. With their meticulous attention to cleanliness and comfort, guests can rest assured that they'll enjoy a relaxing and hygienic environment throughout their stay.</p>
+                <p>What truly sets Ruth and Jamie apart is their lightning-fast response time and personalized travel assistance. Whether guests have a question about the property, need help planning their itinerary, or simply want recommendations for the best coffee shops in town, Ruth and Jamie are always just a message away. With their warm and attentive approach, they go above and beyond to tailor each guest's experience to their unique preferences and needs.</p>
+                <p>From complimentary welcome baskets to curated lists of local attractions, Ruth and Jamie's thoughtful amenities and personalized touches ensure that every guest feels valued and cared for. Whether you're visiting for a weekend getaway or an extended stay, Ruth and Jamie are dedicated to making your time in their properties truly unforgettable.</p>
             </div>
-            <img src="ruth_headshot.jpg" alt="Ruth - Short-Term Rental Hostess">
+            <img src="RuthAndJamieLittleRockAirbnbHost.jpg" alt="Ruth and Jamie - Short-Term Rental Hosts">
         </div>
     </div>
 </body>
