--- a/AboutUs.html
+++ b/AboutUs.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruth and Jamie - Short-Term Rental Hosts</title>
     <style>
+        /* Add your CSS styles here */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -13,13 +14,14 @@
             color: #333;
         }
         .container {
-            max-width: 800px;
+            max-width: 1200px;
             margin: 20px auto;
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-sizing: border-box;
         }
-        .header {
+        header {
             background-color: #333;
             color: #fff;
             padding: 10px;
@@ -66,14 +68,14 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <div class="header-buttons">
-                <a href="https://thevplaces.github.io/index.html">Home</a>
-                <a href="https://calendly.com/">Contact</a>
-                <a href="https://thevplaces.github.io/LittleRockProperties1.html">Properties</a>
-            </div>
+    <header id="mainHeader">
+        <div class="header-buttons">
+            <a href="https://thevplaces.github.io/index.html">Home</a>
+            <a href="https://calendly.com/">Contact</a>
+            <a href="https://thevplaces.github.io/LittleRockProperties1.html">Properties</a>
         </div>
+    </header>
+    <div class="container">
         <h2 class="title">Meet Ruth and Jamie - Your Dedicated Short-Term Rental Hosts</h2>
         <div class="bio">
             <div class="bio-text">
