--- a/AboutUs.html
+++ b/AboutUs.html
@@ -71,7 +71,7 @@
     <header id="mainHeader">
         <div class="header-buttons">
             <a href="https://thevplaces.github.io/index.html">Home</a>
-            <a href="https://calendly.com/">Contact</a>
+            <a href="contact.html">Contact</a>
             <a href="https://thevplaces.github.io/LittleRockProperties1.html">Properties</a>
         </div>
     </header>
