--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         }
         .container {
             max-width: 800px;
-            margin: 20px auto;
+            margin: 80px auto 20px; /* Adjust margin to provide space above the header */
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -38,6 +38,7 @@
             justify-content: space-between;
             align-items: center;
             position: fixed;
+            top: 0; /* Fix header to the top */
             left: 0;
             z-index: 1000;
         }
@@ -52,6 +53,10 @@
         }
         .header-buttons a:hover {
             color: #ddd;
+        }
+        /* Add space below header to avoid content overlap */
+        body > .container {
+            margin-top: 50px;
         }
     </style>
 </head>
