--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
     <header id="mainHeader">
         <div class="header-buttons">
             <a href="index.html">Home</a>
-            <a href="SocialsEvents.html">Properties</a>
+            <a href="LittleRockProperties1.html">Properties</a>
             <a href="AboutUs.html">About Us</a>
         </div>
     </header>
