--- a/LittleRockProperties1.html
+++ b/LittleRockProperties1.html
@@ -131,7 +131,7 @@
     <div class="container">
         <section>
             <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h9.jpg" alt="Property 1">
+                <img src="PropertyPics/DowntownLittleRockBNB1Landing.webp" alt="Property 1">
                 <div class="property-info">
                     <h2>Property 1</h2>
                     <p>Location: Property 1 Location</p>
