--- a/LittleRockProperties1.html
+++ b/LittleRockProperties1.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Estate Agency</title>
     <style>
-        /* Add your CSS styles here */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0; /* Updated background color */
+            background-color: #f0f0f0;
             color: #333;
             min-height: 100vh;
             position: relative;
@@ -19,7 +18,7 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            box-sizing: border-box; /* Include padding in total height */
+            box-sizing: border-box;
         }
         header {
             height: 50px;
@@ -33,9 +32,6 @@
             position: fixed;
             left: 0;
             z-index: 1000;
-        }
-        .header-buttons {
-            display: flex;
         }
         .header-buttons a {
             margin-right: 20px;
@@ -66,42 +62,41 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .property img {
-            max-width: 100%;
-            height: auto;
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
             border-radius: 5px;
             margin-bottom: 10px;
-            transition: transform 0.3s ease;
-        }
-        .property:hover img {
-            transform: scale(1.1);
-        }
-        .property p {
-            font-size: 14px;
-            line-height: 1.4;
         }
         .property-info {
             display: none;
-            position: absolute;
-            background-color: #fff;
-            padding: 10px;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 80%;
+            max-width: 400px;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.95);
             border: 1px solid #ddd;
-            border-radius: 5px;
-            z-index: 1;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            z-index: 1050;
         }
         .property:hover .property-info {
-            display: block;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
-        .property-info h2 {
-            margin-top: 0;
+        .property-info h2, .property-info p, .property-info a {
+            margin: 10px 0;
         }
         .property-info a {
-            display: block;
-            margin-top: 10px;
-            text-align: center;
+            width: auto;
+            padding: 10px 20px;
             color: #fff;
             background-color: #333;
-            padding: 5px 10px;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
@@ -124,12 +119,13 @@
     <header id="mainHeader">
         <div class="header-buttons">
             <a href="index.html">Home</a>
-            <a href="AboutUs.html">About V</a>
+            <a href="AboutUs.html">About Us</a>
             <a href="SocialsEvents.html">Events</a>
         </div>
     </header>
     <div class="container">
         <section>
+            <!-- Property 1 -->
             <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/DowntownLittleRockBNB1Landing.webp" alt="Property 1">
                 <div class="property-info">
@@ -140,9 +136,9 @@
                     <a href="Properties/property1.html">See More</a>
                 </div>
             </div>
-            <!-- Repeat the above div for each property -->
+            <!-- Property 2 -->
             <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/DowntownLittleRockBNB1Landing.webp" alt="Property 2">
+                <img src="PropertyPics/DowntownLittleRockBNB2Landing.webp" alt="Property 2">
                 <div class="property-info">
                     <h2>Property 2</h2>
                     <p>Location: Property 2 Location</p>
@@ -151,18 +147,19 @@
                     <a href="Properties/property2.html">See More</a>
                 </div>
             </div>
+            <!-- Property 3 -->
             <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/RuthHouse1.avif" alt="Property 3">
                 <div class="property-info">
                     <h2>Property 3</h2>
                     <p>Location: Property 3 Location</p>
                     <p>Price: $Z</p>
-                    <p>More information about Property 3.</p>                    
+                    <p>More information about Property 3.</p>
                     <a href="https://www.vrbo.com/4657269ha">VRBO</a>
                 </div>
             </div>
         </section>
-      <div class="page-links">
+        <div class="page-links">
             <a href="LittleRockProperties1.html">1</a>
             <a href="LittleRockProperties2.html">2</a>
             <a href="LittleRockProperties3.html">3</a>
@@ -173,11 +170,20 @@
             property.classList.toggle('active');
             adjustFooterMargin();
         }
-
         function adjustFooterMargin() {
-            var footerHeight = document.getElementById('mainFooter').offsetHeight;
-            document.getElementById('mainHeader').style.marginBottom = footerHeight + 'px';
+            // Placeholder for footer adjustment if needed.
         }
+        window.onclick = function(event) {
+            if (!event.target.matches('.property')) {
+                var popups = document.getElementsByClassName("property-info");
+                for (var i = 0; i < popups.length; i++) {
+                    var openPopup = popups[i];
+                    if (openPopup.style.display == "flex") {
+                        openPopup.style.display = "none";
+                    }
+                }
+            }
+        };
     </script>
 </body>
 </html>
